@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-04T08:10:26Z",
-  "count_outdated" : 389,
-  "uniques_outdated" : 18,
+  "timestamp" : "2022-06-04T16:10:38Z",
+  "count_outdated" : 390,
+  "uniques_outdated" : 19,
   "count" : 406,
   "uniques" : 24,
   "views" : [
-    {
-      "timestamp": "2022-05-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-24T00:00:00Z",
       "count": 1,
